[gd_scene load_steps=9 format=3 uid="uid://c55yx7nvuqhso"]

[ext_resource type="Script" path="res://scenes/falling_spike.gd" id="1_8op1q"]
[ext_resource type="Texture2D" uid="uid://dxjdeljsg34on" path="res://assets/platformer_metroidvania asset pack v1.01/miscellaneous sprites/spikes_trap.png" id="1_vvkqj"]
[ext_resource type="AudioStream" uid="uid://h2fprck6g0se" path="res://assets/sounds/falling-whistle-swish-1-84769.mp3" id="3_6lr4p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0640"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lm7aj"]
size = Vector2(15, 313)

[sub_resource type="Animation" id="Animation_serty"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="Animation" id="Animation_2kj4u"]
resource_name = "fall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(2, 8), Vector2(-1, 8)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fall"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kl4ub"]
_data = {
"RESET": SubResource("Animation_serty"),
"fall": SubResource("Animation_2kj4u")
}

[node name="FallingSpike" type="Node2D"]
script = ExtResource("1_8op1q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 8)
texture = ExtResource("1_vvkqj")

[node name="Hitbox" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_q0640")

[node name="PlayerDetect" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetect"]
position = Vector2(-0.5, 156.5)
shape = SubResource("RectangleShape2D_lm7aj")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kl4ub")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_6lr4p")
volume_db = -5.0
max_distance = 1000.0

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetect" to="." method="_on_player_detect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
